module(
    name = "com_github_bcsgh_tbd",
    version = "0.0.1",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20240722.0.bcr.2",
)

bazel_dep(
    name = "com_github_bcsgh_build_test",
    version = "0.0.1",
)

bazel_dep(
    name = "com_github_bcsgh_cc_embed_data",
    version = "0.0.1",
)
bazel_dep(
    name = "com_github_bcsgh_graphviz",
    version = "0.0.1",
)

bazel_dep(
    name = "com_github_bcsgh_parser_rules",
    version = "0.0.1",
)

bazel_dep(
    name = "eigen",
    version = "4.0.0-20241125.bcr.1"
)

bazel_dep(
    name = "googletest",
    version = "1.15.2",
)
