module(
    name = "com_github_bcsgh_tbd",
    version = "0.0.1",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20250127.0",
)
bazel_dep(
    name = "com_github_bcsgh_build_test",
    version = "0.0.1",
)
bazel_dep(
    name = "com_github_bcsgh_cc_embed_data",
    version = "0.0.3",
)
bazel_dep(
    name = "com_github_bcsgh_graphviz",
    version = "0.0.1",
)
bazel_dep(
    name = "com_github_bcsgh_parser_rules",
    version = "0.0.2",
)

bazel_dep(
    name = "com_github_bcsgh_test_base",
    version = "0.0.1",
    dev_dependency = True,
)

bazel_dep(
    name = "eigen",
    version = "4.0.0-20241125.bcr.1",
)

bazel_dep(
    name = "googletest",
    version = "1.16.0",
    dev_dependency = True,
)

bazel_dep(
    name = "rules_cc",
    version = "0.1.1",
)
bazel_dep(
    name = "rules_shell",
    version = "0.4.0",
)
